examples/negative/16_generic_type_arg_mismatch.aeth
function id<T>(x: T) returns T
  effects pure
do
  return x
end

function main() returns Unit
  effects pure
do
  let value: Int = id<Int>("bad")
end
